--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <div class="about__social">
                             <a href="https://github.com/gmihir" target="_blank" class="about__social-icon"><i class='bx bxl-github' ></i></a>
                             <a href="https://www.linkedin.com/in/mihir-gupta-50b299168/" target="_blank" class="about__social-icon"><i class='bx bxl-linkedin' ></i></a>
-                            <a href="#" class="about__social-icon"><i class='bx bx-globe' ></i></a>
+                            <a href="https://gmihir.github.io" target="_blank" class="about__social-icon"><i class='bx bx-globe' ></i></a>
                         </div>
                     </div>
                 </div>
@@ -144,7 +144,7 @@
                         <div class="projects__link">
                             <h4 class="project__text">Analyzed and improved fraudulent credit card transaction detection with Python, scikit-learn, Pandas, and Seaborn.</h4>
                             <div class="projects__button">
-                                <a href="https://github.com/gmihir/college-shark.git" target="_blank" class="myButton">Visit</a>
+                                <a href="https://github.com/bew030/credit-card-fraud-detection-.git" target="_blank" class="myButton">Visit</a>
                             </div>
                         </div>
                     </div>
@@ -154,7 +154,7 @@
                         <div class="projects__link">
                             <h4 class="project__text">Augmented existing obsolescence prediction techniques with machine learning (RandomForest, Logistic Regression), achieving margin of error of 15 months.</h4>
                             <div class="projects__button">
-                                <a href="https://github.com/gmihir/campus-mobile.git" target="_blank" class="myButton">Visit</a>
+                                <a href="https://github.com/gmihir" target="_blank" class="myButton">Visit</a>
                             </div>
                         </div>
                     </div>
@@ -205,7 +205,7 @@
                     <h2 class="footer__title">LINKS</h2>
                     <a href="https://github.com/gmihir" target="_blank" class="footer__social"><i class='bx bxl-github' ></i></a>
                     <a  href="https://www.linkedin.com/in/mihir-gupta-50b299168/" target="_blank" class="footer__social"><i class='bx bxl-linkedin' ></i></a>
-                    <a href="#" class="footer__social"><i class='bx bx-globe' ></i></a>
+                    <a href="https://gmihir.github.io" target="_blank" class="footer__social"><i class='bx bx-globe' ></i></a>
                 </div>
 
 
