slight change to skills

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <h3 class="skills__subtitle">Programming Languages</h3>
                         <span class="skills__name">Java</span>
                         <span class="skills__name">Python</span>
-                        <span class="skills__name">JavaScript</span>
+                        <span class="skills__name">Node.js</span>
                         <span class="skills__name">Dart</span>
                         <span class="skills__name">HTML</span>
                         <span class="skills__name">CSS</span>
