--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                         <li><a href="#home" class="footer__link">Home</a></li>
                         <li><a href="#about" class="footer__link">About</a></li>
                         <li><a href="#skills" class="footer__link">Skills</a></li>
-                        <li><a href="#projects" class="footer__link">projects</a></li>
+                        <li><a href="#projects" class="footer__link">Projects</a></li>
                         <li><a href="#Contact" class="footer__link">Contact</a></li>
                     </ul>
                 </div>
