changed order + updated college shark link

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                     <ul class="nav__list">
                         <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
                         <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
-                        <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
                         <li class="nav__item"><a href="#projects" class="nav__link">Projects</a></li>
+                        <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
                         <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
                     </ul>
                 </div>
@@ -75,6 +75,56 @@
                 </div>
             </section>
 
+             <!--===== projects =====-->
+             <section class="projects section" id="projects">
+                <h2 class="section-title">Projects</h2>
+
+
+                <div class="projects__container bd-grid">
+                    <div class="projects__img">
+                        <img class="img_blur" src="assets/img/ucsd-logo.png" alt="">
+
+                        <div class="projects__link">
+                            <h4 class="project__text">Implemented new features and improved existing features for the official UCSD mobile app, written in Flutter.</h4>
+                            <div class="projects__button">
+                                <a href="https://github.com/gmihir/campus-mobile.git" target="_blank" class="myButton">Visit</a>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="projects__img">
+                        <img src="assets/img/collegeshark-logo.png" alt="">
+
+                        <div class="projects__link">
+                            <h4 class="project__text">Developed a full-stack web application to streamline the college application process, using Flask, React, Azure SQL, and Firebase.</h4>
+                            <div class="projects__button">
+                                <a href="https://college-shark.com" target="_blank" class="myButton">Visit</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="projects__img">
+                        <img src="assets/img/credit-card-fraud-detection-logo.png" alt="">
+                        <div class="projects__link">
+                            <h4 class="project__text">Analyzed and improved fraudulent credit card transaction detection with Python, scikit-learn, Pandas, and Seaborn.</h4>
+                            <div class="projects__button">
+                                <a href="https://github.com/bew030/credit-card-fraud-detection-.git" target="_blank" class="myButton">Visit</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="projects__img">
+                        <img src="assets/img/bae-systems-logo.png" alt="">
+
+                        <div class="projects__link">
+                            <h4 class="project__text">Augmented existing obsolescence prediction techniques with machine learning (RandomForest, Logistic Regression), achieving margin of error of 15 months.</h4>
+                            <div class="projects__button">
+                                <a href="https://github.com/gmihir" target="_blank" class="myButton">Visit</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
             <!--===== SKILLS =====-->
             <section class="skills section" id="skills">
                 <h2 class="section-title">Skills</h2>
@@ -109,55 +159,6 @@
                     <!-- <div class="skills__img">
                         <img src="assets/img/" alt="">
                     </div> -->
-                </div>
-            </section>
-
-            <!--===== projects =====-->
-            <section class="projects section" id="projects">
-                <h2 class="section-title">Projects</h2>
-
-
-                <div class="projects__container bd-grid">
-                    <div class="projects__img">
-                        <img class="img_blur" src="assets/img/ucsd-logo.png" alt="">
-
-                        <div class="projects__link">
-                            <h4 class="project__text">Implemented new features and improved existing features for the official UCSD mobile app, written in Flutter.</h4>
-                            <div class="projects__button">
-                                <a href="https://github.com/gmihir/campus-mobile.git" target="_blank" class="myButton">Visit</a>
-                            </div>
-                        </div>
-
-                    </div>
-                    <div class="projects__img">
-                        <img src="assets/img/collegeshark-logo.png" alt="">
-
-                        <div class="projects__link">
-                            <h4 class="project__text">Developed a full-stack web application to streamline the college application process, using Flask, React, Azure SQL, and Firebase.</h4>
-                            <div class="projects__button">
-                                <a href="https://github.com/gmihir/college-shark.git" target="_blank" class="myButton">Visit</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="projects__img">
-                        <img src="assets/img/credit-card-fraud-detection-logo.png" alt="">
-                        <div class="projects__link">
-                            <h4 class="project__text">Analyzed and improved fraudulent credit card transaction detection with Python, scikit-learn, Pandas, and Seaborn.</h4>
-                            <div class="projects__button">
-                                <a href="https://github.com/bew030/credit-card-fraud-detection-.git" target="_blank" class="myButton">Visit</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="projects__img">
-                        <img src="assets/img/bae-systems-logo.png" alt="">
-
-                        <div class="projects__link">
-                            <h4 class="project__text">Augmented existing obsolescence prediction techniques with machine learning (RandomForest, Logistic Regression), achieving margin of error of 15 months.</h4>
-                            <div class="projects__button">
-                                <a href="https://github.com/gmihir" target="_blank" class="myButton">Visit</a>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </section>
 
