added amazon position and updated resume

--- a/index.html
+++ b/index.html
@@ -90,6 +90,14 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
+            <div data-date="June 2022 – September 2022">
+                <h3>Amazon</h3>
+                <h4>Software Development Engineer Intern</h4>
+                <p>
+                    I will be a SDE intern for tha Amazon Alexa Mobile Team.
+                </p>
+            </div>
+
             <div data-date="May 2020 – Present">
                 <h3>UCSD Mobile</h3>
                 <h4>Mobile Developer</h4>
