--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <h3>Amazon</h3>
                 <h4>Software Development Engineer Intern</h4>
                 <p>
-                    I will be a SDE intern for tha Amazon Alexa Mobile Team.
+                    I will be a SDE intern for the Amazon Alexa Mobile Assistant team.
                 </p>
             </div>
 
@@ -123,19 +123,9 @@
 
     <div id="education">
         <h2 class="heading">Education</h2>
-        <!-- <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-            </p>
-        </div>
-        End .education-block -->
-
         <div class="education-block">
             <h3>University of California, San Diego</h3>
-            <span class="education-date">September 2019 - December 2022</span>
+            <span class="education-date">September 2019 - June 2023</span>
             <h4>Bachelor of Science in Computer Science</h4>
             <ul>
                 <li>
@@ -227,12 +217,16 @@
             <li>Dart</li>
             <li>C</li>
             <li>C++</li>
+            <li>CI/CD</li>
             <li>AWS Lambda</li>
             <li>AWS API Gateway</li>
             <li>AWS DynamoDB</li>
             <li>Azure Functions</li>
             <li>Azure DevOps</li>
+            <li>Github Actions</li>
             <li>Azure CosmosDB</li>
+            <li>Jest</li>
+            <li>Puppeteer</li>
             <li>Azure ApplicationInsights</li>
             <li>React</li>
             <li>Flask</li>
