--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        I'm a third-year computer science student at UC San Diego with experience in backend development, web development, 
-                        and mobile development. I've worked at CarMax as a SWE intern and I'm currently working at UCSD as a 
+                        I'm a fourth-year computer science student at UC San Diego with experience in backend development, web development, 
+                        and mobile development. I am currently working with Amazon as a SDE intern on the Alexa Mobile Assistant (iOS). I've worked at CarMax as a SWE intern and at UCSD as a 
                         mobile developer. I'm looking to learn and explore new areas in computer science and also to leverage my
                         existing skillset to contribute to software projects!
                     </p>
@@ -94,11 +94,13 @@
                 <h3>Amazon</h3>
                 <h4>Software Development Engineer Intern</h4>
                 <p>
-                    I will be a SDE intern for the Amazon Alexa Mobile Assistant team.
+                    I am currently a SDE intern at Amazon, working on the iOS team for the Alexa Mobile Assistant. My main project 
+                    is to reduce latency for users with weak internet connections. I work with Swift, XCode, and AWS for my work. So far,
+                    I have been able to achieve a reduction in latency by over 400% for users on a 3G network.
                 </p>
             </div>
 
-            <div data-date="May 2020 – Present">
+            <div data-date="May 2020 – June 2022">
                 <h3>UCSD Mobile</h3>
                 <h4>Mobile Developer</h4>
                 <p>
@@ -125,11 +127,11 @@
         <h2 class="heading">Education</h2>
         <div class="education-block">
             <h3>University of California, San Diego</h3>
-            <span class="education-date">September 2019 - June 2023</span>
+            <span class="education-date">September 2019 - January 2023</span>
             <h4>Bachelor of Science in Computer Science</h4>
             <ul>
                 <li>
-                    GPA: 3.92/4.00
+                    GPA: 3.89/4.00
                 </li>
                 <li>
                     Minor in Business
@@ -212,11 +214,13 @@
             <li>Java</li>
             <li>JavaScript</li>
             <li>Python</li>
+            <li>Swift</li>
             <li>C#</li>
             <li>Node.js</li>
             <li>Dart</li>
             <li>C</li>
             <li>C++</li>
+            <li>XCode</li>
             <li>CI/CD</li>
             <li>AWS Lambda</li>
             <li>AWS API Gateway</li>
