--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Mihir Gupta</h1>
-            <h2>Computer Science Student at UC San Diego</h2>
+            <h2>Software Engineer</h2>
             <a href="./resume.pdf" target="__blank" class="btn-rounded-white">View Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -76,10 +76,11 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        I'm a fourth-year computer science student at UC San Diego with experience in backend development, web development, 
-                        and mobile development. I am currently working with Amazon as a SDE intern on the Alexa Mobile Assistant (iOS). I've worked at CarMax as a SWE intern and at UCSD as a 
-                        mobile developer. I'm looking to learn and explore new areas in computer science and also to leverage my
-                        existing skillset to contribute to software projects!
+                        I'm currently a Software Development Engineer at Amazon. I work on the iOS Alexa team, building key components for the iOS Alexa app and for Alexa in other Amazon apps (Amazon, Amazon Music, Audible, etc.). I graduated from UC San Diego with a B.S. in Computer Science. Previously, I have worked at G2 Software Systems, a defense contractor working with DoD and NIWC Pacific. 
+                    </p>
+                    <br>
+                    <p>
+                        In my free time, I enjoy cooking and watching sports. I also enjoy playing badminton and playing with my dog. 
                     </p>
                 </div>
             </div>
@@ -90,23 +91,45 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
+            <div data-date="September 2023 – Present">
+                <h3>Amazon</h3>
+                <h4>Software Development Engineer</h4>
+                <p>
+                    I currently work with Amazon as a Software Development Engineer on the iOS Alexa team. I have worked on implementing UI
+                    requirements for both iOS and iPadOS for a critical LLM feature, using <b>Swift and Figma</b>. I have also reduced the crash volume
+                    of the SDK after optimizing for memory management issues. 
+                </p>
+            </div>
+
+            <div data-date="January 2023 – September 2023">
+                <h3>G2 Software Systems</h3>
+                <h4>Software Engineer</h4>
+                <p>
+                    I worked at G2 Software Systems as a Software Engineer. I worked closely with my team members and 
+                    stakeholders to deliver features using <b>Java</b> and <b>React</b> with <b>Redux</b>. As a part of my 
+                    eligibility to work with DoD and NIWC Pacific, I obtained a security clearance.
+                </p>
+            </div>
+
             <div data-date="June 2022 – September 2022">
                 <h3>Amazon</h3>
                 <h4>Software Development Engineer Intern</h4>
                 <p>
-                    I am currently a SDE intern at Amazon, working on the iOS team for the Alexa Mobile Assistant. My main project 
-                    is to reduce latency for users with weak internet connections. I work with Swift, XCode, and AWS for my work. So far,
-                    I have been able to achieve a reduction in latency by over 400% for users on a 3G network.
+                    I was a SDE intern at Amazon, working on the iOS team for the Alexa Mobile Assistant. My main project 
+                    is to reduce latency for users with weak internet connections. I work with <b>Swift and SwiftUI</b> for my work.
+                    I built a system-wide encoding improvement which <b>reduced user-perceived latency by over 560%</b> for users on a 3G connection. 
+                    I completed my project early and worked with team members to pick up tickets and resolve bugs, mainly in the UI layer of the 
+                    application using SwiftUI. 
                 </p>
             </div>
 
-            <div data-date="May 2020 – June 2022">
+            <div data-date="May 2020 – December 2022">
                 <h3>UCSD Mobile</h3>
                 <h4>Mobile Developer</h4>
                 <p>
-                    I currently work on the official UCSD mobile application (iOS/Android) using Flutter and AWS. My primary role is to 
+                    I worked on the official UCSD mobile application (iOS/Android) using <b>Flutter and AWS </b>. My primary role is to 
                     create new features and improve existing processes. I use Flutter for frontend development and create APIs using Node.js 
-                    in AWS for backend development.
+                    in AWS for backend development. I also worked with <b>AWS DynamoDB</b> to support these APIs.
                 </p>
             </div>
 
@@ -115,8 +138,8 @@
                 <h4>Software Engineering Intern</h4>
                 <p>
                     I was a software engineering intern at CarMax in the summer of 2021. I was a part of the Systems Integration team and 
-                    worked on building an internal tool for tracking and resolving issues with customer credit/debit/ACH payments. I used Microsoft 
-                    Azure, React, and .NET (C#) to build this tool.
+                    worked on building an internal tool for tracking and resolving issues with customer credit/debit/ACH payments. I used <b>Microsoft 
+                    Azure, React, and .NET (C#) </b> to build this tool.
                 </p>
             </div>
         </div>
@@ -127,11 +150,11 @@
         <h2 class="heading">Education</h2>
         <div class="education-block">
             <h3>University of California, San Diego</h3>
-            <span class="education-date">September 2019 - January 2023</span>
+            <span class="education-date">September 2019 - December 2022</span>
             <h4>Bachelor of Science in Computer Science</h4>
             <ul>
                 <li>
-                    GPA: 3.89/4.00
+                    GPA: 3.88/4.00
                 </li>
                 <li>
                     Minor in Business
@@ -141,6 +164,42 @@
         <!-- End .education-block -->
     </div>
     <!-- End #education -->
+
+
+    <div id="skills">
+        <h2 class="heading">Skills</h2>
+        <ul>
+            <li>React</li>
+            <li>Flutter</li>
+            <li>SwiftUI</li>
+            <li>Java</li>
+            <li>JavaScript</li>
+            <li>Python</li>
+            <li>Swift</li>
+            <li>C#</li>
+            <li>HTML/CSS</li>
+            <li>Node.js</li>
+            <li>Dart</li>
+            <li>C</li>
+            <li>C++</li>
+            <li>XCode</li>
+            <li>CI/CD</li>
+            <li>AWS Lambda</li>
+            <li>AWS API Gateway</li>
+            <li>AWS DynamoDB</li>
+            <li>Azure Functions</li>
+            <li>Azure DevOps</li>
+            <li>Github Actions</li>
+            <li>Azure CosmosDB</li>
+            <li>Jest</li>
+            <li>Puppeteer</li>
+            <li>Azure ApplicationInsights</li>
+            <li>Maven</li>
+            <li>Flask</li>
+            <li>.NET</li>
+        </ul>
+    </div>
+    <!-- End #skills -->
 
     <div id="projects" class="background-alt">
         <h2 class="heading">Projects</h2>
@@ -177,7 +236,6 @@
                             I led a group project to build a full stack web application to help future undergraduates find the right college for them.
                             We used Flask (Python), React, Microsoft SQL Server, and Firebase to develop and host the application. 
                         </p>
-                        <a href="https://college-shark.com">View Project</a>
                         <br/>
                         <br/>
                         <a href="https://github.com/gmihir/college-shark">View Source</a>
@@ -206,41 +264,7 @@
             </div>
         </div>
     </div>
-    <!-- End #projects -->
 
-    <div id="skills">
-        <h2 class="heading">Skills</h2>
-        <ul>
-            <li>Java</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Swift</li>
-            <li>C#</li>
-            <li>Node.js</li>
-            <li>Dart</li>
-            <li>C</li>
-            <li>C++</li>
-            <li>XCode</li>
-            <li>CI/CD</li>
-            <li>AWS Lambda</li>
-            <li>AWS API Gateway</li>
-            <li>AWS DynamoDB</li>
-            <li>Azure Functions</li>
-            <li>Azure DevOps</li>
-            <li>Github Actions</li>
-            <li>Azure CosmosDB</li>
-            <li>Jest</li>
-            <li>Puppeteer</li>
-            <li>Azure ApplicationInsights</li>
-            <li>React</li>
-            <li>Flask</li>
-            <li>.NET</li>
-            <li>Flutter</li>
-            <li>HTML</li>
-            <li>CSS</li>
-        </ul>
-    </div>
-    <!-- End #skills -->
 
     <div id="contact">
         <h2>Contact Me!</h2>
